[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pes_noma-mod"
version = "1.0.0"
description = "PES Noma custom handlers, blueprints, and utilities"
authors = [
    {name = "PES Team"}
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.0",  # For API calls
    "google-search-results>=2.4.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools]
packages = ["pes_noma", "pes_noma.handlers"]

[tool.setuptools.package-data]
pes_noma = ["blueprints/*.json"]




